# trai

./: .gitignore  .gitmodules  LICENSE  README.md
Disentangled-Variational-Autoencoder/: main.py
Disentangled-Variational-Autoencoder/notebook/: notebook-3D.ipynb  (+1 more)
DisentangledVAE/: .gitignore
MRTNet/: eval_img2pc.py  run_img2pc.py  testchamfer.py  train_img2pc.py
NG-RGBdecode/: README.md  eval.py  main_fpn.py  model_fpn.py
PC-NBV/: All_data.csv  Compare_permut_nochange.py  NBV_data  Permutation_Outputs.py  Permutation_Outputs_synthetic.py  Permutation_Outputs_synthetic_40.py  Shapenet_v1  Test_viewstate.txt  Test_viewstate_model.txt  View_coverage_selected.py  data  generate_nbv_data.py  generate_nbv_data_new.py  generate_nbv_data_no_target.py  generate_nbv_data_rosbag.py  generate_nbv_data_synthetic.py  generate_nbv_data_synthetic_adjusted_categories.py  generate_nbv_data_synthetic_adjusted_categories_new.py  generate_nbv_data_synthetic_adjusted_categories_new_40.py  lmdb_write_shapenet.py  lmdb_write_shapenet_exclude_class.py  lmdb_write_shapenet_permuted.py  lmdb_write_shapenet_permuted_exclude_class.py  lmdb_write_shapenet_volume.py  lmdb_write_shapenet_volume_Blensor.py  lmdb_write_shapenet_volume_permuted.py  lmdb_write_shapenet_volume_permuted_new.py  test.py  test_2.py  train.py
PC-NBV/Alex_pop_work/: CMakeLists.txt  Reeb_graph.cpp  Reeb_viz_graph.cpp  add_normals.cpp  batch_add_normals.cpp  batch_add_normals_voxel.cpp  batch_eliminate_nan_points.cpp  batch_nan_remove.cpp  batch_voxel.cpp  batch_voxel_passthrough.cpp  batch_voxel_passthrough_double_iterator.cpp  batch_voxel_passthrough_double_iterator_same_name.cpp  batch_voxel_passthrough_score.cpp  batch_voxel_passthrough_score_Volume.cpp  compute_volume_node_2.cpp  pcd_convert_to_ASCII.cpp  pcd_density.cpp  pcd_downsample.cpp  pcd_read.cpp
PC-NBV/Alex_pop_work/Python_code/: reeb.py  reeb.txt
PC-NBV/Alex_pop_work/Scripturi/: batch_visualize.sh  get_names.sh  make_folders.sh  rename.py  script_mutat.sh
PC-NBV/Alex_pop_work/config_files/: config_Reeb.txt  config_Reeb_VIZ.txt  input_folder.txt  output_folder.txt
PC-NBV/Alex_pop_work/data_in/: .98dac2c2fd439e92a341e46346e4add464d096.cam  .e198e480b7c8a90019913d30fcd41ee2581515b9.cam  Test_Reeb.pcd
PC-NBV/Alex_pop_work/data_in/Scripts/: make_folders.sh
PC-NBV/Alex_pop_work/data_out/: batch_visualize.sh
PC-NBV/Alex_pop_work/data_out/Score/: Score_test_PCL.csv  names.txt
PCD-Completion-Tr/: README.md
PC_NBV/: Output_model_blender  data_util_nbv.py  generate_nbv_data.py  log  test.py  train.py
Spatial-Transformer-PCD/: README.md
ToFNest/: README.md  eval.py
TofNet/: datasetloader.py  eval.py  model_fpn.py  train_tofnet.py
d3gatten/: README
eGPU-ToF/: README.md  train.py
eGPU-ToF/utils/depth2pcd/: CMakeLists.txt
eGPU-ToF/utils/depth2pcd/src/: depth2pcd.cpp
gravity/: CMakeLists.txt  README.md  package.xml
latent_3d_points/: README.md  docker_build.sh  docker_run.sh  dockerfile
normal2rgb/: CMakeLists.txt  README.md
normal2rgb/bash_files/: compute_normals.sh  create_train.py  filterpcd.sh  jpg2png.sh  movefiles.sh  movefiles_after.sh  pcd2image.sh  pcd2xyz.sh  rename.sh  sample.sh  testtrain.sh
normal2rgb/src/: cloud2image.cpp  combine_depth_ir.cpp  combine_depth_ir.py  combine_depth_ir_v2.py  compute_normals.cpp  jpg2png.cpp  normal2rgb.cpp  pcd2xyz.cpp  voxel_filter.cpp
orthogonal-planes/src/orthogonal-planes/: CMakeLists.txt
orthogonal-planes/src/orthogonal-planes/cfg/: line_detect_node.cfg  passthrough_filter_node.cfg
orthogonal-planes/src/orthogonal-planes/data/Ply_files_input/: vedere1_large_box.ply
orthogonal-planes/src/orthogonal-planes/launch/: tutorial_online.launch  tutorial_online_pico.launch
orthogonal-planes/src/orthogonal-planes/ply_detect_refine/src/: main.cpp
orthogonal-planes/src/orthogonal-planes/src/: Lines_node.cpp  compute_surface_normals_node.cpp  voxel_filter_node.cpp  z_compute_volume_node_sync_NOT.cpp
pcd_reg/: config.py  new_score.npy  pcd_s_corr.pcd  res.pcd  res1.pcd  test.py
pvcnn/: add_class_id  s3dis.pvcnn.area5.c1.eval.npy  train.py
pvcnn/depth-ir/: CMakeLists.txt
pvcnn/depth-ir/depth-ir/: main.cpp
pvcnn/fileprocessing/: .gitignore  CMakeLists.txt  README.md
pvcnn/fileprocessing/bash_files/: addnoise2depth.sh  addnoise2rgb.sh  ascii2binary_xyz.sh  ascii2binary_xyznormal.sh  ascii2binary_xyzrgb.sh  augmentation.py  cloud2rgbimage.sh  comparepcd.sh  compute_normals.sh  create_dataset_pipeline.sh  create_eval_gt_pipeline.sh  create_kitti_normalgt.sh  create_mask.sh  create_train.py  depth2pcd.sh  depth2pcd_color.sh  depth2pcd_normal.sh  depth3.sh  depth_outlier_mask.sh  depthmask2pcd.sh  depthn2pcd_normal.sh  evaluate.sh  fitplane2mask.sh  jpg2png.sh  kitti_normal_performance.sh  kitti_rename.sh  list_files.py  maskcompare.sh  movefiles.sh  movefiles_after.sh  movepreds.sh  normal2rgb.sh  normal_performance.sh  normalizepcd.sh  pcd2depth.sh  pcd2image_pipeline.sh  pcd2xyz.sh  pcdnormal2xyznc.sh  pklz2file.py  pw_compare.sh  (+13 more)
pvcnn/fileprocessing/src/: addnoise2depth.cpp  addnoise2rgb.cpp  ascii2binary_xyz.cpp  ascii2binary_xyznormal.cpp  ascii2binary_xyzrgb.cpp  augdepth2pnormal.cpp  cloud2rgbimage.cpp  comparepcd.cpp  compute_normals.cpp  converter.cpp  create_mask.cpp  depth2ir.cpp  depth2pcd.cpp  depth2pcd_color.cpp  depth2pcd_normal.cpp  depth3.cpp  depth_outlier_mask.cpp  depthmask2pcd.cpp  depthn2pcd_normal.cpp  fitplane2mask.cpp  jpg2png.cpp  maskcompare.cpp  normal2rgb.cpp  normal_performance_angle.cpp  normal_performance_distribution.cpp  normal_performance_quality.cpp  normalizepcd.cpp  pcd2depth.cpp  pcd2xyz.cpp  pcdnormal2xyznc.cpp  pw_depthcompare.cpp  pw_pcdcompare.cpp  sor.cpp  sweep_nan.cpp  unifynames.cpp  voxel_filter.cpp  xyz2pcd.cpp  xyzn2normal.cpp  xyzn2pcdnormal.cpp
pvcnn/pcd2depth/: CMakeLists.txt
pvcnn/pcd2depth/src/: pcd2depth.cpp
scripts/: README.md  data_download.py
shape_finder/: CMakeLists.txt  README.md  nodelet_plugins.xml  package.xml
shape_finder_5cam_test/: CMakeLists.txt  README.md  package.xml
utils/: pcd.py  t-SNE.py
(+364 files in other folders)
