cmake_minimum_required(VERSION 2.8 FATAL_ERROR)

project(fileprocessing)

find_package(PCL 1.2 REQUIRED)
find_package(OpenCV REQUIRED)

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

include_directories(${PCL_INCLUDE_DIRS})
include_directories( ${OpenCV_INCLUDE_DIRS} )
link_directories(${PCL_LIBRARY_DIRS})
add_definitions(${PCL_DEFINITIONS})

#add_executable (converter src/converter.cpp)
add_executable (addnoise2depth src/addnoise2depth.cpp)
add_executable (addnoise2rgb src/addnoise2rgb.cpp)
add_executable (ascii2binary_xyz src/ascii2binary_xyz.cpp)
add_executable (ascii2binary_xyznormal src/ascii2binary_xyznormal.cpp)
add_executable (ascii2binary_xyzrgb src/ascii2binary_xyzrgb.cpp)
add_executable (augdepth2pnormal src/augdepth2pnormal.cpp)
add_executable (cloud2rgbimage src/cloud2rgbimage.cpp)
add_executable (comparepcd src/comparepcd.cpp)
add_executable (compute_normals src/compute_normals.cpp)
add_executable (create_mask src/create_mask.cpp)
add_executable (depth_outlier_mask src/depth_outlier_mask.cpp)
add_executable (depth2ir src/depth2ir.cpp)
add_executable (depth2pcd src/depth2pcd.cpp)
add_executable (depth2pcd_color src/depth2pcd_color.cpp)
add_executable (depth2pcd_normal src/depth2pcd_normal.cpp)
add_executable (depth3 src/depth3.cpp)
add_executable (depthmask2pcd src/depthmask2pcd.cpp)
add_executable (fitplane2mask src/fitplane2mask.cpp)
add_executable (maskcompare src/maskcompare.cpp)
add_executable (normal_performance_quality src/normal_performance_quality.cpp)
add_executable (normal_performance_angle src/normal_performance_angle.cpp)
add_executable (normal_performance_distribution src/normal_performance_distribution.cpp)
add_executable (normal2rgb src/normal2rgb.cpp)
add_executable (normalizepcd src/normalizepcd.cpp)
add_executable (pcd2depth src/pcd2depth.cpp)
add_executable (pcd2xyz src/pcd2xyz.cpp)
add_executable (pcdnormal2xyznc src/pcdnormal2xyznc.cpp)
add_executable (pw_depthcompare src/pw_depthcompare.cpp)
add_executable (pw_pcdcompare src/pw_pcdcompare.cpp)
add_executable (sor src/sor.cpp)
add_executable (sweep src/sweep_nan.cpp)
add_executable (voxel_filter src/voxel_filter.cpp)
add_executable (xyz2pcd src/xyz2pcd.cpp)
add_executable (xyzn2normal src/xyzn2normal.cpp)
add_executable (xyzn2pcdnormal src/xyzn2pcdnormal.cpp)
add_executable (depthn2pcd_normal src/depthn2pcd_normal.cpp)

#target_link_libraries (converter ${PCL_LIBRARIES} pcl_common pcl_io)
target_link_libraries (addnoise2depth ${OpenCV_LIBS})
target_link_libraries (addnoise2rgb ${OpenCV_LIBS})
target_link_libraries (ascii2binary_xyz ${PCL_LIBRARIES})
target_link_libraries (ascii2binary_xyznormal ${PCL_LIBRARIES})
target_link_libraries (ascii2binary_xyzrgb ${PCL_LIBRARIES})
target_link_libraries (augdepth2pnormal ${OpenCV_LIBS} ${PCL_LIBRARIES})
target_link_libraries (cloud2rgbimage ${OpenCV_LIBS} ${PCL_LIBRARIES})
target_link_libraries (comparepcd ${PCL_LIBRARIES})
target_link_libraries (compute_normals ${PCL_LIBRARIES})
target_link_libraries (create_mask ${OpenCV_LIBS})
target_link_libraries (depth_outlier_mask ${OpenCV_LIBS} ${PCL_LIBRARIES})
target_link_libraries (depth2ir ${OpenCV_LIBS})
target_link_libraries (depth2pcd ${OpenCV_LIBS} ${PCL_LIBRARIES})
target_link_libraries (depth2pcd_color ${OpenCV_LIBS} ${PCL_LIBRARIES})
target_link_libraries (depth2pcd_normal ${OpenCV_LIBS} ${PCL_LIBRARIES})
target_link_libraries (depth3 ${OpenCV_LIBS})
target_link_libraries (depthmask2pcd ${OpenCV_LIBS} ${PCL_LIBRARIES})
target_link_libraries (fitplane2mask ${OpenCV_LIBS} ${PCL_LIBRARIES})
target_link_libraries (maskcompare ${OpenCV_LIBS})
target_link_libraries (normal_performance_quality ${PCL_LIBRARIES})
target_link_libraries (normal_performance_angle ${PCL_LIBRARIES})
target_link_libraries (normal_performance_distribution ${PCL_LIBRARIES})
target_link_libraries (normal2rgb ${PCL_LIBRARIES})
target_link_libraries (normalizepcd ${PCL_LIBRARIES})
target_link_libraries (pcd2depth ${OpenCV_LIBS} ${PCL_LIBRARIES})
target_link_libraries (pcd2xyz ${PCL_LIBRARIES})
target_link_libraries (pcdnormal2xyznc ${PCL_LIBRARIES})
target_link_libraries (pw_depthcompare ${OpenCV_LIBS})
target_link_libraries (pw_pcdcompare ${OpenCV_LIBS} ${PCL_LIBRARIES})
target_link_libraries (sor ${PCL_LIBRARIES})
target_link_libraries (sweep ${PCL_LIBRARIES})
target_link_libraries (voxel_filter ${PCL_LIBRARIES})
target_link_libraries (xyz2pcd ${PCL_LIBRARIES})
target_link_libraries (xyzn2normal ${PCL_LIBRARIES})
target_link_libraries (xyzn2pcdnormal ${PCL_LIBRARIES})
target_link_libraries (depthn2pcd_normal ${OpenCV_LIBS} ${PCL_LIBRARIES})